--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.30",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19",
+    "@types/testing-library__react-hooks": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
